--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 	<title>大字版</title>
+	link rel=stylesheet type="text/css" href="https://fonts.googleapis.com/earlyaccess/cwtexyen.css">
 <style type="text/css">
 #textarea {
 	position:absolute;
@@ -27,7 +28,7 @@
 	left:0px;
 	width:100%;
 	height:100%;
-	font-family: sans;
+	font-family: ‘cwTeXYen’, sans-serif;
 	padding:0px;
 	margin:0px;
 	border:0px;
@@ -53,7 +54,7 @@
 	left:0px;
 	font-size:30px;
 	white-space:pre;
-	font-family: sans;
+	font-family: ‘cwTeXYen’, sans-serif;
 	border:0px;
 	padding:0.1em;
 	margin:0px;
