--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 	<title>大字版</title>
-	link rel=stylesheet type="text/css" href="https://fonts.googleapis.com/earlyaccess/cwtexyen.css">
+	<link rel=stylesheet type="text/css" href="https://fonts.googleapis.com/earlyaccess/cwtexyen.css">
 <style type="text/css">
 #textarea {
 	position:absolute;
